--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: NS2 Progressive Mod
-description: --Progressive mod mission statement--
+description: A new take on balancing the economy, techtree and combat systems to be more engaging and rewarding for players & commanders.
